# openplc-runtime

./: .gitignore  Dockerfile  Dockerfile.sim  docker-compose.yml  docker-entrypoint.sim.sh  install.sh  plugins.conf  plugins.conf.docker  project.yml  requirements.txt  start_sim.bat
.github/workflows/: docker.yml
client/: .gitignore  README.md
client/docs/: OBSERVABILITY.md
client/models/blinky/: README.md  program.st
client/models/blinky/conf/: modbus_slave.json
client/models/tank_sim/: README.md  program.st
client/models/tank_sim/conf/: modbus_slave.json  opcua.json
client/models/tank_sim/sim/: hmi_sim.py
client/models/water_plant/: README.md  program.st
client/models/water_plant/conf/: modbus_slave.json  opcua.json
client/models/water_plant/sim/: hmi_sim.py  hmi_sim_extended.py  hmi_sim_normal.py
client/openplc_client/: __init__.py  __main__.py  binaries.py  cli.py  model_client.py  opcua_gen.py  packager.py  toolchain.py  uploader.py  watcher.py
core/src/: CMakeLists.txt
core/src/drivers/: plugin_driver.c  plugin_driver.h
core/src/drivers/plugins/native/: plugin_logger.c
core/src/drivers/plugins/native/ethercat/: CMakeLists.txt  ethercat_config.c  ethercat_config.h  ethercat_config.json  ethercat_io.c  ethercat_io.h  ethercat_master.c  ethercat_master.h  ethercat_plugin.c  ethercat_plugin.h
core/src/drivers/plugins/python/modbus_slave/: simple_modbus.py
core/src/drivers/plugins/python/opcua/: __init__.py  _asyncua_patches.py  address_space.py  alarm_builder.py  alarm_manager.py  callbacks.py  event_emitter.py  opcua_config_template.json  opcua_memory.py  opcua_security.py  opcua_utils.py  plugin.py  requirements.txt  server.py  synchronization.py  user_manager.py
core/src/drivers/plugins/python/shared/: iec_type_converter.py  iec_type_registry.py
core/src/drivers/plugins/python/shared/plugin_config_decode/: opcua_config_model.py
core/src/plc_app/: journal_buffer.c  plc_main.c  plc_state_manager.c  python_loader.c  scan_cycle_manager.c  scan_cycle_manager.h  unix_socket.c  unix_socket.h
core/src/plc_app/include/: iec_python.h
core/src/plc_app/utils/: utils.c  utils.h
docs/: DOCKER.md  LOGGING_NORMALIZATION_PLAN.md  ethercat-ebpfcat-plugin-development-plan.md  ethercat-plugin-development-plan.md
scripts/: compile.sh  setup_discovery_venv.sh
scripts/discovery/: ethercat_scan.py  requirements.txt
sim-orchestrator/: Dockerfile  entrypoint.sh
sim-orchestrator/app/: config.py  main.py  runtime_client.py  sim_process.py  state.py
sim-orchestrator/app/routes/: health.py  logs.py  model.py
tests/: test_ethercat_data_types.c
tests/pytest/discovery/: test_ethercat_discovery.py
tests/pytest/plugins/opcua/: test_subscriptions.py
tests/support/: plugin_driver_stubs.c
tests/unit/: test_iec_type_converter.py  test_iec_type_registry.py
webserver/: app.py  plcapp_management.py  restapi.py  runtimemanager.py  unixclient.py
webserver/discovery/: discovery_routes.py  ethercat_discovery.py
